fix: Modify z-index property of search layout

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,6 +34,7 @@ body {
   min-height: 140px;
   position: fixed;
   right: 0;
+  z-index: 1000;
 }
 
 .search__icon {
